# perf-tools-next

tools/perf/: .gitignore  Cargo.toml
tools/perf/perf-rs/: Cargo.toml  README.md
tools/perf/perf-rs/src/: list.rs  main.rs  pmu_events.rs  stat.rs  version.rs
tools/perf/xtask/: Cargo.toml
tools/perf/xtask/src/: codegen.rs  main.rs  pmu.rs
